Clean up g_memory_coordinator after each MemoryCoordinatorImpl test

MemoryCoordinatorImpl tests fail the first time and should be re-run separately.
g_memory_coordinator need to be cleaned up between tests, otherwise the subsequent tests
will crash trying to reset g_memory_coordinator.

This CL implements reset method which called after each MemoryCoordinatorImpl in destructor.

BUG=698282

Review-Url: https://codereview.chromium.org/2726983006
Cr-Commit-Position: refs/heads/master@{#454926}

Former-commit-id: aba30978d6c58a937eb2cf5fbdcde3e2abb7cfaa